--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "husky": "7.0.2",
     "jest": "27.1.0",
     "lint-staged": "11.1.2",
+    "msw": "^0.35.0",
     "prettier": "2.3.2",
     "ts-jest": "27.0.5",
-    "typescript": "4.4.2"
+    "typescript": "4.4.2",
+    "whatwg-fetch": "^3.6.2"
   },
   "lint-staged": {
     "*.(tsx|ts)": "eslint --cache --fix",
